Fixed mobile gap for real

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ section{
     max-width: 1200px;
     margin: 0 auto;
     width: 100%;
+    position: relative;
 }
 .hero::before {
     content: '';
@@ -91,6 +92,8 @@ section{
     background-repeat: no-repeat;
     opacity: 0.7; /* adjust this for desired transparency */
     z-index: -1;
+    margin: 0;
+    padding: 0;
 }
 
 .hero-content {
@@ -179,7 +182,7 @@ section{
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 13px solid var(--background-color);
+    border: 13px solid #b4cab4;
     cursor: default;
 }
 .hero-image:hover {
@@ -200,7 +203,7 @@ transform: scale(1.02);
     }
 
     .hero {
-        padding: 0 20px;
+        padding: 0;
     }
 
     .hero-content {
